# stag

./: CMakeLists.txt  demo_with_an_image.cpp  demo_with_cam.cpp  demo_with_movie.cpp  main.cpp
src/: Drawer.cpp  Drawer.h  Stag.cpp  Stag.h
src/ED/: Timer.h
